kubernetes-networks/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: homework
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:stable
          volumeMounts:
            - mountPath: /homework
              name: homework
            - mountPath: /etc/nginx/conf.d/
              name: nginx-conf
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          lifecycle:
            preStop:
              exec:
                command:
                  - sh
                  - -c
                  - rm /homework/index.html
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
              httpHeaders:
                - name: HTTP
                  value: "200"
            initialDelaySeconds: 5
            periodSeconds: 15
      tolerations:
        - key: "homework"
          operator: "Equal"
          value: "true"

      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
        - name: homework
          emptyDir:
            sizeLimit: 500Mi
