kubernetes-networks/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-nginx
  namespace: homework
spec:
  selector:
    app: nginx
  ports:
    - port: 8000
      targetPort: 8000
